Update subtitles and section headings in index.html

--- a/index.html
+++ b/index.html
@@ -10,28 +10,28 @@
 <body>
     <header>
         <h1>Know Your Rights at the Polls</h1>
-        <p class="subtitle">A clear, simple guide for NYC voters</p>
+        <p class="subtitle">A clear, simple guide to voting in NYC</p>
     </header>
 
     <main>
         <section class="card">
-            <h2>Your Fundamental Rights</h2>
+            <h2>Your Rights as a Voter:</h2>
             <ul>
-                <li><strong>Right to vote free from discrimination</strong> (Voting Rights Act).</li>
-                <li><strong>Right to assistance</strong> for language access or disability-related needs.</li>
-                <li><strong>Right to a provisional ballot</strong> if your name is missing from the rolls.</li>
-                <li><strong>Right to vote without intimidation or harassment.</strong></li>
-                <li><strong>Right to report violations</strong> and request help.</li>
+                <li><strong>You have the right to vote free from discrimination</strong> (Voting Rights Act).</li>
+                <li><strong>...the right to assistance</strong> for language access or disability-related needs.</li>
+                <li><strong>...the right to a provisional ballot</strong> if your name is missing from the rolls.</li>
+                <li><strong>...the right to vote without intimidation or harassment.</strong></li>
+                <li><strong>...the right to report violations</strong> and request help.</li>
             </ul>
         </section>
 
         <section class="card">
-            <h2>Election Protection Hotline (Auto-Detected)</h2>
+            <h2>Have questions or concerns? Call the Election Protection Hotline:</h2>
             <p id="hotline">Loading hotline number…</p>
         </section>
 
         <section class="card">
-            <h2>Quick “Know Your Rights” Quiz</h2>
+            <h2>How well do you know your rights?</h2>
             <div id="quiz"></div>
             <button id="submitQuiz">Submit Answers</button>
             <p id="quizResult"></p>
