Update voter rights information in index.html

--- a/index.html
+++ b/index.html
@@ -15,13 +15,22 @@
 
     <main>
         <section class="card">
-            <h2>Your Rights as a Voter:</h2>
+            <h2>You are eligible to vote if you are:
             <ul>
-                <li><strong>You have the right to vote free from discrimination</strong> (Voting Rights Act).</li>
-                <li><strong>...the right to assistance</strong> for language access or disability-related needs.</li>
-                <li><strong>...the right to a provisional ballot</strong> if your name is missing from the rolls.</li>
-                <li><strong>...the right to vote without intimidation or harassment.</strong></li>
-                <li><strong>...the right to report violations</strong> and request help.</li>
+                <li><strong>a registered voter</strong></li>
+                <li><strong>at least 18 years of age</strong></li>
+                <li><strong>a US citizen</strong></li>
+                <li><strong>in line at your poll site before it is scheduled to close</strong></li>
+            </ul></h2>
+        <section class="card">
+            <h2>At your poll site, you have the right to:</h2>
+            <ul>
+                <li><strong>vote free from discrimination</strong> <a href="https://en.wikipedia.org/wiki/Voting_Rights_Act_of_1965">(Voting Rights Act)</a></li>
+                <li><strong>assistance</strong> for language access or disability-related needs</li>
+                <li><strong>a provisional ballot</strong> if your name is missing from the voter list</li>
+                <li><strong>vote without intimidation or harassment</strong></li>
+                <li><strong>report violations</strong> and request help</li>
+                <li><strong>not show ID if you are not a first-time voter</strong></li>
             </ul>
         </section>
 
