--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
 
     <main>
         <section class="card">
-            <h2>You are eligible to vote if you are:
+            <h2>You are eligible to vote if you are:</h2>
             <ul>
                 <li><strong>a registered voter</strong></li>
                 <li><strong>at least 18 years of age</strong></li>
                 <li><strong>a US citizen</strong></li>
                 <li><strong>in line at your poll site before it is scheduled to close</strong></li>
-            </ul></h2>
+            </ul>
+        </section>
         <section class="card">
             <h2>At your poll site, you have the right to:</h2>
             <ul>
@@ -30,7 +31,7 @@
                 <li><strong>a provisional ballot</strong> if your name is missing from the voter list</li>
                 <li><strong>vote without intimidation or harassment</strong></li>
                 <li><strong>report violations</strong> and request help</li>
-                <li><strong>not show ID if you are not a first-time voter</strong></li>
+                <li><strong>not show ID</strong> if you are not a first-time voter</li>
             </ul>
         </section>
 
