Enhance index.html with links and clarifications

--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 <body>
     <header>
         <h1>Know Your Rights at the Polls</h1>
-        <p class="subtitle">A clear, simple guide to voting in NYC</p>
+        <p class="subtitle">A simple guide to voting in NYC</p>
     </header>
 
     <main>
         <section class="card">
             <h2>You are eligible to vote if you are:</h2>
             <ul>
-                <li><strong>a registered voter</strong></li>
+                <li><strong>a <a href="https://www.vote.nyc/page/register-vote">registered voter</a></strong></li>
                 <li><strong>at least 18 years of age</strong></li>
                 <li><strong>a US citizen</strong></li>
-                <li><strong>in line at your poll site before it is scheduled to close</strong></li>
+                <li><strong>in line at <a href="https://findmypollsite.vote.nyc">your poll site</a> before it is scheduled to close</strong></li>
             </ul>
         </section>
         <section class="card">
@@ -49,7 +49,7 @@
     </main>
 
     <footer>
-        <p>Sources: ACLU, U.S. Election Assistance Commission, NYC Board of Elections</p>
+        <p>Sources: <a href="https://www.aclu.org/issues/voting-rights">ACLU</a>, <a href="https://www.eac.gov/voters/voting-101-election-information-new-voters">U.S. Election Assistance Commission</a>, <a href="https://www.vote.nyc">NYC Board of Elections</a></p>
     </footer>
 
     <script src="script.js"></script>
