Add target='_blank' to external links in index.html

--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
         <section class="card">
             <h2>You are eligible to vote if you are:</h2>
             <ul>
-                <li><strong>a <a href="https://www.vote.nyc/page/register-vote">registered voter</a></strong></li>
+                <li><strong>a <a href="https://www.vote.nyc/page/register-vote" target="_blank">registered voter</a></strong></li>
                 <li><strong>at least 18 years of age</strong></li>
                 <li><strong>a US citizen</strong></li>
-                <li><strong>in line at <a href="https://findmypollsite.vote.nyc">your poll site</a> before it is scheduled to close</strong></li>
+                <li><strong>in line at <a href="https://findmypollsite.vote.nyc" target="_blank">your poll site</a> before it is scheduled to close</strong></li>
             </ul>
         </section>
         <section class="card">
             <h2>At your poll site, you have the right to:</h2>
             <ul>
-                <li><strong>vote free from discrimination</strong> <a href="https://en.wikipedia.org/wiki/Voting_Rights_Act_of_1965">(Voting Rights Act)</a></li>
+                <li><strong>vote free from discrimination</strong> <a href="https://en.wikipedia.org/wiki/Voting_Rights_Act_of_1965" target="_blank">(Voting Rights Act)</a></li>
                 <li><strong>assistance</strong> for language access or disability-related needs</li>
                 <li><strong>a provisional ballot</strong> if your name is missing from the voter list</li>
                 <li><strong>vote without intimidation or harassment</strong></li>
@@ -49,7 +49,7 @@
     </main>
 
     <footer>
-        <p>Sources: <a href="https://www.aclu.org/issues/voting-rights">ACLU</a>, <a href="https://www.eac.gov/voters/voting-101-election-information-new-voters">U.S. Election Assistance Commission</a>, <a href="https://www.vote.nyc">NYC Board of Elections</a></p>
+        <p>Sources: <a href="https://www.aclu.org/issues/voting-rights" target="_blank">ACLU</a>, <a href="https://www.eac.gov/voters/voting-101-election-information-new-voters" target="_blank">U.S. Election Assistance Commission</a>, <a href="https://www.vote.nyc" target="_blank">NYC Board of Elections</a></p>
     </footer>
 
     <script src="script.js"></script>
