Update header and add navigation links in index.html

--- a/index.html
+++ b/index.html
@@ -9,9 +9,17 @@
 
 <body>
     <header>
-        <h1>Know Your Rights at the Polls</h1>
+        <h1>Know Your Voting Rights</h1>
         <p class="subtitle">A simple guide to voting in NYC</p>
     </header>
+          <nav>
+        <a href="index.html">Home</a>
+        <a href="RegisterandPoll.html">How to Register & Poll Site Locator</a>
+        <a href="EarlyVoting.html">Early Voting & Affidavits</a>
+        <a href="IncomingAdmin.html">Incoming Administration</a>
+        <a href="KnowYourRights.html">Know Your Rights</a>
+        <a href="FAQ.html">FAQ</a>
+    </nav>
 
     <main>
         <section class="card">
