Add eligibility criteria for voting

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <li><strong>at least 18 years of age</strong></li>
                 <li><strong>a US citizen</strong></li>
                 <li><strong>in line at <a href="https://findmypollsite.vote.nyc" target="_blank">your poll site</a> before it is scheduled to close</strong></li>
+                <li><strong>on probation or parole</strong></li>
             </ul>
         </section>
         <section class="card">
