Update link to Register and Poll Site Locator

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
           <nav>
         <a href="index.html">Home</a>
-        <a href="RegisterandPoll.html">How to Register & Poll Site Locator</a>
+        <a href="https://mpitel814.github.io/info654/PrattVotes/RegisterandPoll.html">How to Register & Poll Site Locator</a>
         <a href="EarlyVoting.html">Early Voting & Affidavits</a>
         <a href="IncomingAdmin.html">Incoming Administration</a>
         <a href="KnowYourRights.html">Know Your Rights</a>
