Bold the subtitle in index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>Know Your Voting Rights</h1>
-        <p class="subtitle">A simple guide to voting in NYC</p>
+        <p class="subtitle"><b>A simple guide to voting in NYC</b></p>
 
           <nav>
         <a href="index.html">Home</a>
